# api/api.go
@@ -5,5 +5,7 @@ import "github.com/gin-gonic/gin"
 func RegisterRoutes(app *gin.RouterGroup) {
 
 	projectRouter(app.Group("/project"))
+	componentRouter(app.Group("/component"))
+	collectionRouter(app.Group("/collection"))
 
 }
